--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Workload Summary" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/favicon-32x32.png" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/base-styles.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
